Changes Microservicio Product

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,18 @@
 			<version>1.6.14</version>
 		</dependency>
 
+		<!-- Spring Data Redis Reactive -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis-reactive</artifactId>
+		</dependency>
+
+		<!-- Lettuce es el cliente por defecto -->
+		<dependency>
+			<groupId>io.lettuce</groupId>
+			<artifactId>lettuce-core</artifactId>
+		</dependency>
+
 		<!-- Testing -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -127,6 +139,72 @@
 					<outputFile>${project.build.directory}/checkstyle-result.xml</outputFile>
 					<outputFileFormat>xml</outputFileFormat>
 				</configuration>
+			</plugin>
+
+
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.10</version>
+				<executions>
+					<!-- Prepara el agente de JaCoCo antes de que se ejecuten los tests -->
+					<execution>
+						<id>prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+
+					<!-- Genera el reporte luego de correr los tests -->
+					<execution>
+						<id>report</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<excludes>
+								<!-- Excluir paquetes y clases -->
+								<exclude>pe/com/app/product/advice/**</exclude>
+								<exclude>pe/com/app/product/common/**</exclude>
+								<exclude>pe/com/app/product/model/**</exclude>
+								<exclude>pe/com/app/product/repository/**</exclude>
+								<exclude>**/MicroServApplication*</exclude> <!-- Por ejemplo, clase principal -->
+							</excludes>
+						</configuration>
+					</execution>
+
+					<!-- Verifica que se cumplan umbrales mínimos de cobertura -->
+					<execution>
+						<id>check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<rule>
+									<element>BUNDLE</element>
+									<limits>
+										<limit>
+											<counter>INSTRUCTION</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.85</minimum> <!-- 50% mínimo de cobertura -->
+										</limit>
+									</limits>
+								</rule>
+							</rules>
+							<excludes>
+								<!-- Excluir paquetes y clases -->
+								<exclude>pe/com/app/product/advice/**</exclude>
+								<exclude>pe/com/app/product/common/**</exclude>
+								<exclude>pe/com/app/product/model/**</exclude>
+								<exclude>pe/com/app/product/repository/**</exclude>
+								<exclude>**/MicroServApplication*</exclude>
+							</excludes>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 
 
