--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 # Ignorar campos null en el response
 spring.jackson.default-property-inclusion=non_null
+
+# Config Redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6380
+spring.data.redis.password=xyq.123
+spring.data.redis.timeout=60000
+
